--- a/src/main/resources/assets/alpha_test/lang/en_us.json
+++ b/src/main/resources/assets/alpha_test/lang/en_us.json
@@ -12,7 +12,7 @@
   "block.alpha_test.null": "Null",
   "block.alpha_test.rainbow_block": "Rainbow Block",
 
-
+  "block.alpha_test.glow": "Glow",
 
 
   "creativetab.alpha_test.alphatest" : "Alpha Test"
